--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,18 @@
-cmake_minimum_required(VERSION 3.0.0)
-project(ConfigParser VERSION 0.1.0)
+cmake_minimum_required(VERSION 3.12)
 
-set(CMAKE_CXX_STANDARD 20)
+project(
+        ConfigFileParser
+        VERSION 1.0
+        DESCRIPTION "Config file parser"
+        LANGUAGES CXX
+)
 
-link_directories(lib)
 
-add_subdirectory(lib)
-add_subdirectory(bin)
 
+set(CMAKE_CXX_STANDARD 17)
+
+
+add_subdirectory(src)
+add_subdirectory(example)
 enable_testing()
 add_subdirectory(tests)
